# cryptocurrency-trading-simulation

./: .gitignore  Dockerfile  Makefile  NOTE.txt  README.md  docker-compose.yml  main.cpp  pyproject.toml
backend/: README.md  backend-deployment.yaml  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: crypto.py  portfolio.py  trades.py  users.py
backend/app/database/: mongodb.py
backend/app/middlewares/: __init__.py
backend/app/models/: portfolio.py  trade.py  user.py
backend/app/services/: auth.py  notifications.py  portfolio.py  trading.py
backend/app/tests/: test_portfolio.py  test_users.py
docs/: requirements.md
docs/phase1_design/: data_flow_diagram.md  user_stories.md
docs/phase2_dev/: repository_structure.md
docs/phase3_data/: data_overview.md
docs/phase5_tests/: testplan.md
docs/phase6_maintain/: maintenance.md
docs/user/: requirements.md
frontend/: frontend-deployment.yaml
frontend/public/: index.html
frontend/src/: App.css  App.js
network/heartbeat/: HeartbeatManager.cpp  HeartbeatManager.h
network/tcp/: TcpClient.cpp  TcpClient.h
network/websocket/: WebSocketClient.cpp  WebSocketClient.h
scripts/: deploy.bat  deploy.sh  setup_db.py  start.bat  stop.bat
src/tests/: test_market_maker.cpp  test_order_router.cpp
src/trade_surveillance/: TradeAlert.cpp  TradeSurveillance.h
tests/core_tests/: test_market_maker.cpp  test_order_router.cpp
tests/network_tests/: test_tcp_client.cpp  test_websocket_client.cpp
tests/performance_tests/: performance_tests.cpp
utils/config/: Config.cpp  (+2 more)
(+44 files in other folders)
