[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = "A description of your project"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.68.0"
uvicorn = "0.15.0"
pymongo = "3.12.0"
python-dotenv = "0.19.2"
jose = "3.2.0"
passlib = {extras = ["bcrypt"], version = "1.7.4"}

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
pytest-asyncio = "0.15.1"
